Network_Policies/network-policy-examples/6.Allow_alpha_bravo_mysql.yml
ku exec -it  alphautils1 -n alpha -- telnet mysql.mysqldb.svc.cluster.local 3306
ku exec -it  bravoutils1 -n bravo -- telnet mysql.mysqldb.svc.cluster.local 3306
ku exec -it  charlieutils1 -n charlie -- telnet mysql.mysqldb.svc.cluster.local 3306

#Block All MYSQL Connectivity
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: mysql-delay-all-ingress
  namespace: mysqldb
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress: []

#Allow Only PODS from Alpha Bravo Charlie Connect to mysql
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-alpha-bravo-charlie-to-mysql-connect-on-3306
  namespace: mysqldb
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress: 
    - from:
      - namespaceSelector: 
          matchLabels:
            nsp: alpha
        podSelector:
          matchLabels:
            ns: alpha
      - namespaceSelector: 
          matchLabels:
            nsp: bravo
        podSelector:
          matchLabels:
            ns: bravo
      - namespaceSelector: 
          matchLabels:
            nsp: charlie
        podSelector:
          matchLabels:
            ns: charlie
      ports:
       - protocol: TCP
         port: 3306
         
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-alpha-to-mysql-connect
  namespace: mysqldb
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress: 
    - from:
      - namespaceSelector: 
          matchLabels:
            nsp: alpha
        podSelector:
          matchLabels:
            ns: alpha   # This will allow only POD with ns=alpha to communicate with mysql i.e utilspod

#Allowing Specific Port will block ICMP and Allow Only Port
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-alpha-to-mysql-connect-on-3306
  namespace: mysqldb
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress: 
    - from:
      - namespaceSelector: 
          matchLabels:
            nsp: alpha
        podSelector:
          matchLabels:
            ns: alpha
      ports:
       - protocol: TCP
         port: 3306
         
         
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-bravo-mysql-connect
  namespace: mysqldb
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress: 
    - from:
      - namespaceSelector: 
          matchLabels:
            nsp: bravo
        podSelector:
          matchLabels:
            ns: bravo

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-charlie-mysql-connect
  namespace: mysqldb
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress: 
    - from:
      - namespaceSelector: 
          matchLabels:
            nsp: charlie
        podSelector:
          matchLabels:
            app: charlienginx01
